# ChatGPT-MidJourney-prompt

./: .gitignore  README.md  bot.py  config.ini  main.py  pyproject.toml  requirements.txt
models/: artistic.txt  weigths.txt
modules/: prompt.py  settings.py
src/chatGPTMidJourneyPrompt/: mjPrompt.py
src/chatGPTMidJourneyPrompt/prompt_models/: artistic.txt  weights.txt
src/chatGPTMidJourneyPrompt/settings/: V4.py  V5.py  default.py  niji.py  testp.py
